# wim-support-metrics

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: weekly.yml
data/export/: 2026-W25.json  2026-W26.json  2026-W27.json  2026-W28.json  2026-W29.json
data/reports/: 2026-W25.md  2026-W26.md  2026-W27.md  2026-W28.md  2026-W29.md
docs/features/: 2026-07-02_initial-prd.md
docs/superpowers/plans/: 2026-07-02-wim-support-metrics.md
docs/superpowers/specs/: 2026-07-02-wim-support-metrics-design.md
scripts/: extract.py  publish.py  report.py  weekly.py
tests/: test_cli.py  test_config.py  test_confluence_client.py  test_extractor.py  test_jira_client.py  test_metrics.py  test_pipeline.py  test_report.py  test_serialization.py  test_week.py
tests/fixtures/: jira_issue.json  snapshot_2026-W26.json
wim_metrics/: __init__.py  config.py  confluence_client.py  extractor.py  jira_client.py  metrics.py  models.py  pipeline.py  report.py  serialization.py  week.py
